k8s/base/worker/chain-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chain
spec:
  selector:
    app: chain
  ports:
    - port: 3001
      targetPort: 3001
  clusterIP: None
